<?xml version="1.0"?>
<package format="2">
  <name>gsoc_example_project_demo</name>
  <version>0.0.0</version>
  <description>The gsoc_example_project_demo package</description>


  <maintainer email="bveit@uni-bremen.de">bjoern</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>unreal_vis_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>unreal_vis_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>unreal_vis_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
